--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI="mongodb+srv://safayet:safayet@todo.5nyotfn.mongodb.net/Todo?retryWrites=true&w=majority&appName=Todo"
+MONGO_URI="mongodb+srv://safayet:safayet@todo.5nyotfn.mongodb.net/todo?retryWrites=true&w=majority&appName=Todo"
