--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
